<resources>
    <string name="app_name">play-companion</string>
    <string name="pc_title">Play Companion</string>
    <string name="pc_dice_title">Dice</string>
    <string name="pc_wheel_title">Wheel</string>
    <string name="pc_prompts_title">Prompts</string>
    <string name="pc_coin_flip_title">Coin flip</string>
    <string name="pc_scattergories_title">Scattergories</string>
    <string name="pc_hourglass_title">Hourglass</string>
    <string name="pc_btn_roll">Roll</string>
    <string name="pc_checkbox_d4">D4</string>
    <string name="pc_checkbox_d6">D6</string>
    <string name="pc_checkbox_d8">D8</string>
    <string name="pc_checkbox_d10">D10</string>
    <string name="pc_checkbox_d12">D12</string>
    <string name="pc_checkbox_d20">D20</string>
    <string name="pc_dice_numbers">1</string>
    <string name="pc_dice_image">dice_image</string>
    <string name="pc_image_dice">image dice</string>
    <string name="pc_image_wheel">image wheel</string>
    <string name="pc_image_teams">image teams</string>
    <string name="pc_image_coin_flip">image coin flip</string>
    <string name="pc_image_scattergories">image scattergories</string>
    <string name="pc_image_hourglass">image hourglass</string>
    <string name="pc_question">\?</string>
    <string name="pc_btn_prompt">Get prompt</string>
    <string name="pc_return">return</string>
    <string name="pc_submit">Submit</string>
    <string name="pc_login">Login</string>
    <string name="pc_register">Register</string>
    <string name="pc_email">Email</string>
    <string name="pc_password">Password</string>
    <string name="pc_text_go_register">You don\'t have an account?</string>
    <string name="pc_register_here">Register here</string>
    <string name="pc_text_go_login">You have an account?</string>
    <string name="pc_login_here">Login here</string>
    <string name="pc_account_title">Account</string>
    <string name="pc_fname">First name</string>
    <string name="pc_lname">Last name</string>
    <string name="pc_npassword">New Password</string>
    <string name="pc_cpassword">Confirm Password</string>
    <string name="pc_save_changes">Save changes</string>
    <string name="pc_log_out">Log out</string>
    <string name="pc_delete_account">Delete account</string>
    <string name="pc_heads">Heads</string>
    <string name="pc_tails">Tails</string>
    <string name="pc_coin_image">coin_image</string>
    <string name="pc_flip">Flip</string>
    <string name="pc_zero_s">0s</string>
    <string name="pc_hourglass_image">hourglass_image</string>
    <string name="pc_start">Start</string>
    <string name="pc_ten">10</string>
    <string name="pc_seconds">Seconds</string>
    <string name="pc_profile">profile</string>
</resources>