<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pc_background"
    tools:context=".DiceActivity">

    <TextView
        android:id="@+id/pc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_black_italic"
        android:text="@string/pc_hourglass_title"
        android:textAllCaps="true"
        android:textColor="@color/pc_white"
        android:textSize="@dimen/pc_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pc_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/pc_zero_s"
        android:textColor="@color/pc_white"
        android:textSize="@dimen/pc_title_size"
        app:layout_constraintBottom_toTopOf="@+id/pc_hourglass_cont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/pc_hourglass_stream_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="0"
        android:contentDescription="@string/pc_hourglass_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hourglass_stream" />

    <ImageView
        android:id="@+id/pc_hourglass_bottom_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="0"
        android:contentDescription="@string/pc_hourglass_image"
        android:scaleY="1"
        android:transformPivotY="174dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hourglass_bottom" />

    <ImageView
        android:id="@+id/pc_hourglass_top_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="0"
        android:contentDescription="@string/pc_hourglass_image"
        android:scaleY="1"
        android:transformPivotY="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hourglass_top" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pc_hourglass_cont"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pc_hourglass_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/pc_hourglass_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/main_hourglass" />

        <ImageView
            android:id="@+id/pc_hourglass_full_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/pc_hourglass_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/main_hourglass_full" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/pc_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/pc_white"
        android:text="@string/pc_start"
        android:textColor="@color/pc_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pc_hourglass_cont"
        tools:cornerRadius="@dimen/pc_radius" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/pc_ten"
        android:textAlignment="center"
        android:textColor="@color/pc_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pc_start_button" />

    <TextView
        android:id="@+id/pc_label_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/pc_seconds"
        android:textColor="@color/pc_white"
        android:textSize="@dimen/pc_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/pc_transparent"
        android:onClick="returnMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/round_arrow_back_ios_24" />

</androidx.constraintlayout.widget.ConstraintLayout>