<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2C37"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/pc_title"
        android:textAllCaps="true"
        android:textColor="@color/pc_white"
        android:textSize="@dimen/pc_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/pc_title">

        <Button
            android:id="@+id/pc_btn_dice"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/pc_black"
            android:text="@string/pc_dice_title"
            android:textColor="@color/pc_transparent"
            app:cornerRadius="@dimen/pc_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pc_btn_text_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pc_dice_title"
            android:textColor="@color/pc_white"
            android:textSize="@dimen/pc_text_size"
            app:layout_constraintEnd_toEndOf="@id/pc_btn_dice"
            app:layout_constraintStart_toStartOf="@id/pc_btn_dice"
            app:layout_constraintTop_toBottomOf="@id/pc_btn_dice" />

        <Button
            android:id="@+id/pc_btn_wheel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/pc_black"
            android:text="@string/pc_wheel_title"
            android:textColor="@color/pc_transparent"
            app:cornerRadius="@dimen/pc_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pc_btn_text_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pc_wheel_title"
            android:textColor="@color/pc_white"
            android:textSize="@dimen/pc_text_size"
            app:layout_constraintEnd_toEndOf="@id/pc_btn_wheel"
            app:layout_constraintStart_toStartOf="@id/pc_btn_wheel"
            app:layout_constraintTop_toBottomOf="@id/pc_btn_wheel" />

        <Button
            android:id="@+id/pc_btn_teams"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/pc_black"
            android:text="@string/pc_teams_title"
            android:textColor="@color/pc_transparent"
            app:cornerRadius="@dimen/pc_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pc_btn_text_teams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pc_teams_title"
            android:textColor="@color/pc_white"
            android:textSize="@dimen/pc_text_size"
            app:layout_constraintEnd_toEndOf="@id/pc_btn_teams"
            app:layout_constraintStart_toStartOf="@id/pc_btn_teams"
            app:layout_constraintTop_toBottomOf="@id/pc_btn_teams" />

        <Button
            android:id="@+id/pc_btn_coin_flip"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/pc_black"
            android:text="@string/pc_coin_flip_title"
            android:textColor="@color/pc_transparent"
            app:cornerRadius="@dimen/pc_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pc_btn_dice" />

        <TextView
            android:id="@+id/pc_btn_text_coin_flip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pc_coin_flip_title"
            android:textColor="@color/pc_white"
            android:textSize="@dimen/pc_text_size"
            app:layout_constraintEnd_toEndOf="@id/pc_btn_coin_flip"
            app:layout_constraintStart_toStartOf="@id/pc_btn_coin_flip"
            app:layout_constraintTop_toBottomOf="@id/pc_btn_coin_flip" />

        <Button
            android:id="@+id/pc_btn_scattergories"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/pc_black"
            android:text="@string/pc_scattergories_title"
            android:textColor="@color/pc_transparent"
            app:cornerRadius="@dimen/pc_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pc_btn_wheel" />

        <TextView
            android:id="@+id/pc_btn_text_scattergories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pc_scattergories_title"
            android:textColor="@color/pc_white"
            android:textSize="@dimen/pc_text_size"
            app:layout_constraintEnd_toEndOf="@id/pc_btn_scattergories"
            app:layout_constraintStart_toStartOf="@id/pc_btn_scattergories"
            app:layout_constraintTop_toBottomOf="@id/pc_btn_scattergories" />

        <Button
            android:id="@+id/pc_btn_hourglass"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/pc_black"
            android:text="@string/pc_hourglass_title"
            android:textColor="@color/pc_transparent"
            app:cornerRadius="@dimen/pc_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pc_btn_teams" />

        <TextView
            android:id="@+id/pc_btn_text_hourglass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pc_hourglass_title"
            android:textColor="@color/pc_white"
            android:textSize="@dimen/pc_text_size"
            app:layout_constraintEnd_toEndOf="@id/pc_btn_hourglass"
            app:layout_constraintStart_toStartOf="@id/pc_btn_hourglass"
            app:layout_constraintTop_toBottomOf="@id/pc_btn_hourglass" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>